# tskpayapp

./: .eslintrc.cjs  APP_README.md  README.md  SETUP_COMPLETE.md  package-lock.json  package.json  product-overview.md
apps/tskpay-desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/tskpay-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tskpay-desktop/src-tauri/icons/: icon.icns
apps/tskpay-desktop/src-tauri/src/: main.rs
apps/tskpay-desktop/src-tauri/src/database/: backup.rs  commands.rs  mod.rs  queries.rs  schema.sql
apps/web-archived/: README.md  index.html
data-model/: data-model.md
design-system/: colors.json  fonts.md  tailwind-colors.md  tokens.css  typography.json
instructions/: one-shot-instructions.md
instructions/incremental/: 01-foundation.md  02-clani-in-skupine.md  03-stroski-in-obracunavanje.md  04-placila-in-bancni-uvoz.md  05-pregled-in-porocila.md
prompts/: section-prompt.md
sections/clani-in-skupine/: README.md  sample-data.json  tests.md  types.ts
sections/placila-in-bancni-uvoz/: README.md  sample-data.json  tests.md  types.ts
sections/pregled-in-porocila/: README.md  sample-data.json  tests.md  types.ts
sections/stroski-in-obracunavanje/: README.md  sample-data.json  tests.md  types.ts
shell/: README.md
shell/components/: AppShell.tsx  MainNav.tsx  UserMenu.tsx  index.ts
src/data/: appStore.ts  useAppStore.ts
src/lib/: utils.ts
src/pages/: ClaniInSkupinePage.tsx  PlacilaInBancniUvozPage.tsx  PregledInPorocilaPage.tsx  StroskiInObračunavanjePage.tsx
src/types/: index.ts
(+108 files in other folders)
